[project]
name = "langc-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
]
